# haskell-clean-architecture

./: .gitignore  api.test  cabal.project  cabal.project.freeze  default.nix  package.yaml  shell.nix  stack.yaml
app/: Main.hs
discount/: README.md  discount.cabal
discount/app/: Main.hs
discount/src/: CLI.hs  Discounter.hs  RateRepositoryImplement.hs
discount/test/: Spec.hs
src/entity/Entity/: Book.hs  Lending.hs  User.hs
src/interface-adaptor/InterfaceAdaptor/: BookView.hs  InMemory.hs  Server.hs
src/use-case/UseCase/: Query.hs  Returning.hs
