cabal-version:       2.4

name:                discount
version:             0.1.0.0
-- synopsis:
description: Please see the README on GitHub at <https://github.com/cohei/haskell-clean-architecture/tree/master/discount#readme>
license:             MIT
license-file:        LICENSE
author:              TANIGUCHI Kohei
maintainer:          a.d.xvii.kal.mai@gmail.com
-- copyright:
extra-source-files: REAEME.md

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wmissing-import-lists
    -Wmissing-local-signatures
    -Wmonomorphism-restriction
    -Wpartial-fields
    -Wredundant-constraints
    -fdefer-typed-holes

library
  import: warnings
  exposed-modules:
    CLI
    Discounter
    RateRepositoryImplement
  build-depends:       base ^>= 4.12.0.0
              , transformers ^>= 0.5.6.2
  hs-source-dirs:      src
  default-language:    Haskell2010

executable discount
  import: warnings
  main-is: Main.hs
  build-depends:       base ^>= 4.12.0.0
                     , discount
                     , transformers ^>= 0.5.6.2
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite discount-test
  type: exitcode-stdio-1.0
  import: warnings
  main-is: Spec.hs
  build-depends: base ^>= 4.12.0.0
               , bytestring ^>= 0.10.8.2
               , hspec == 2.7.*
               , discount
               , main-tester ^>= 0.2.0.1
  hs-source-dirs: test
